[gd_scene load_steps=12 format=3 uid="uid://dnbrvu6k3r2fk"]

[ext_resource type="Theme" uid="uid://cniktbk5ckwmp" path="res://style/WarmLight.theme" id="1_drul2"]
[ext_resource type="Script" uid="uid://8xfomon67q8" path="res://Tools/Note/scripts/edit.gd" id="2_d7hbn"]
[ext_resource type="Texture2D" uid="uid://cwutt58ll2ylv" path="res://Tools/ProgressClock/res/circle.png" id="2_t2pea"]
[ext_resource type="Texture2D" uid="uid://6lr5w3wpygsx" path="res://Tools/ProgressClock/res/circle2.png" id="3_7d88t"]
[ext_resource type="Script" uid="uid://re3wysm7dm48" path="res://Tools/ProgressClock/scripts/texture_progress_bar.gd" id="4_4bayb"]
[ext_resource type="AudioStream" uid="uid://cehkc5tbnlcxs" path="res://Tools/ProgressClock/res/switch20.ogg" id="5_j87ru"]
[ext_resource type="FontFile" uid="uid://b3s77qdpk8msq" path="res://style/font/routed-gothic-wide.ttf" id="6_nfv31"]
[ext_resource type="BitMap" uid="uid://c846jovk82hlx" path="res://Tools/ProgressClock/res/clickmask.bmp" id="7_vxso3"]
[ext_resource type="Script" uid="uid://blaea5cjijoj4" path="res://Tools/ProgressClock/scripts/TitleEdit.gd" id="8_3bb3f"]
[ext_resource type="Script" uid="uid://bicpdqhqkbdyp" path="res://Tools/ProgressClock/scripts/spin_box.gd" id="8_a55lg"]
[ext_resource type="Script" uid="uid://c7boavfdlcmfl" path="res://Tools/ProgressClock/scripts/BodyEdit.gd" id="9_h7iv7"]

[node name="Window2" type="Window"]
handle_input_locally = false
gui_embed_subwindows = true
title = "Progress Clock"
initial_position = 1
size = Vector2i(400, 225)
min_size = Vector2i(400, 225)
theme = ExtResource("1_drul2")

[node name="Body" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_drul2")

[node name="VBoxContainer" type="VBoxContainer" parent="Body"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Body/VBoxContainer"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="Body/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = -1

[node name="PopupMenu" type="PopupMenu" parent="Body/VBoxContainer/HBoxContainer/MenuBar"]
auto_translate_mode = 1
title = "File"

[node name="PopupMenu2" type="PopupMenu" parent="Body/VBoxContainer/HBoxContainer/MenuBar"]
auto_translate_mode = 1
title = "Edit"

[node name="ReferenceRect" type="ReferenceRect" parent="Body/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Edit" type="Button" parent="Body/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Editing"
script = ExtResource("2_d7hbn")

[node name="HBoxContainer2" type="HBoxContainer" parent="Body/VBoxContainer"]
layout_mode = 2

[node name="ReferenceRect" type="ReferenceRect" parent="Body/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Body/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0

[node name="Clock" type="TextureProgressBar" parent="Body/VBoxContainer/HBoxContainer2/CenterContainer"]
layout_mode = 2
theme = ExtResource("1_drul2")
max_value = 8.0
value = 1.0
rounded = true
fill_mode = 4
texture_under = ExtResource("2_t2pea")
texture_progress = ExtResource("3_7d88t")
script = ExtResource("4_4bayb")
radius = 64

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Body/VBoxContainer/HBoxContainer2/CenterContainer/Clock"]
stream = ExtResource("5_j87ru")
volume_db = -20.0
pitch_scale = 1.1
mix_target = 1
max_polyphony = 4

[node name="Label" type="Label" parent="Body/VBoxContainer/HBoxContainer2/CenterContainer/Clock"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -15.0
offset_right = 38.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("6_nfv31")
theme_override_font_sizes/font_size = 32
text = "0/0"
horizontal_alignment = 1

[node name="Button" type="TextureButton" parent="Body/VBoxContainer/HBoxContainer2/CenterContainer/Clock"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
button_mask = 3
texture_click_mask = ExtResource("7_vxso3")

[node name="SpinBox" type="SpinBox" parent="Body/VBoxContainer/HBoxContainer2/CenterContainer/Clock"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 16.0
offset_right = -12.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 0
min_value = 2.0
max_value = 8.0
value = 8.0
rounded = true
script = ExtResource("8_a55lg")

[node name="ScrollContainer" type="ScrollContainer" parent="Body/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_drul2")
follow_focus = true
scroll_vertical_custom_step = 1.0
horizontal_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Body/VBoxContainer/HBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Body/VBoxContainer/HBoxContainer2/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LineEdit" type="TextEdit" parent="Body/VBoxContainer/HBoxContainer2/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_drul2")
theme_type_variation = &"HeaderLarge"
placeholder_text = "Title."
editable = false
wrap_mode = 1
scroll_fit_content_height = true
script = ExtResource("8_3bb3f")

[node name="TextEdit" type="TextEdit" parent="Body/VBoxContainer/HBoxContainer2/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_drul2")
placeholder_text = "Lorem ipsum dolor sit amet."
editable = false
wrap_mode = 1
scroll_fit_content_height = true
script = ExtResource("9_h7iv7")

[node name="ReferenceRect" type="ReferenceRect" parent="Body/VBoxContainer/HBoxContainer2/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[connection signal="toggled" from="Body/VBoxContainer/HBoxContainer/Edit" to="Body/VBoxContainer/HBoxContainer/Edit" method="_on_toggled"]
[connection signal="toggled" from="Body/VBoxContainer/HBoxContainer/Edit" to="Body/VBoxContainer/HBoxContainer2/CenterContainer/Clock/SpinBox" method="_on_edit_toggled"]
[connection signal="toggled" from="Body/VBoxContainer/HBoxContainer/Edit" to="Body/VBoxContainer/HBoxContainer2/ScrollContainer/HBoxContainer/VBoxContainer/LineEdit" method="_on_edit_toggled"]
[connection signal="toggled" from="Body/VBoxContainer/HBoxContainer/Edit" to="Body/VBoxContainer/HBoxContainer2/ScrollContainer/HBoxContainer/VBoxContainer/TextEdit" method="_on_edit_toggled"]
[connection signal="mouse_entered" from="Body/VBoxContainer/HBoxContainer2/CenterContainer/Clock/Button" to="Body/VBoxContainer/HBoxContainer2/CenterContainer/Clock" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Body/VBoxContainer/HBoxContainer2/CenterContainer/Clock/Button" to="Body/VBoxContainer/HBoxContainer2/CenterContainer/Clock" method="_on_mouse_exited"]
[connection signal="pressed" from="Body/VBoxContainer/HBoxContainer2/CenterContainer/Clock/Button" to="Body/VBoxContainer/HBoxContainer2/CenterContainer/Clock" method="_on_button_pressed"]
[connection signal="value_changed" from="Body/VBoxContainer/HBoxContainer2/CenterContainer/Clock/SpinBox" to="Body/VBoxContainer/HBoxContainer2/CenterContainer/Clock" method="_on_spin_box_value_changed"]
